# ShowMetadata

./: CMakeLists.txt  LICENSE  README.md
src/: ShowMetadata.cpp  ShowMetadataConfig.h.in
